Change JDK version in build, split tests into more simple tests, and some little detailes in classes for better working